--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
 
 <p style="font-size: 50px;text-align: center;color: white;">这里是小时</p>
 
-<img src="Ishmaorange.jpg" alt="以实玛橘" height="320" width="320">
+<img src="Ishmaorange.jpg" alt="以实玛橘" height="100" width="320">
 
 <p style="color: white;">这里有一些好玩的东西：</p>
 
-<div style="width:10000px;overflow: hidden;">
+<div style="width:10000px;overflow: hidden;margin-left: 1em;">
  
-    <div id="title" style="height:10px;width:10000px;background-color: black;color: white;" onclick="onTileClick()">一些基金会项目</div>
+    <div id="title" style="height:10px;width:10000px;background-color: black;color: white;" onclick="onTileClick()">一些基金会项目（点击以收起）</div>
    
-    <div id="content" style="height:150px;background-color: black;color: white;">
-        <p> <a href="http://scp-wiki-cn.wikidot.com/scp-cn-3000">SCP-CN-3000</a>&nbsp;&nbsp;&nbsp;&nbsp;众节点永垂不朽<br>
+    <div id="content" style="height:1000px;background-color: black;color: white;">
+        <p> <br>它们有的在创意上一鸣惊人，有的在情感上收放自如，但是共同点是出色的文笔以及极高的评分。<br><br>
+            <a href="http://scp-wiki-cn.wikidot.com/scp-cn-3000">SCP-CN-3000</a>&nbsp;&nbsp;&nbsp;&nbsp;众节点永垂不朽<br>
             <a href="http://scp-wiki-cn.wikidot.com/scp-cn-3999">SCP-CN-3999</a>&nbsp;&nbsp;&nbsp;&nbsp;跨越天堂<br>
             <a href="http://scp-wiki-cn.wikidot.com/scp-cn-2000">SCP-CN-2000</a>&nbsp;&nbsp;&nbsp;&nbsp;混沌理论<br>
             <a href="http://scp-wiki-cn.wikidot.com/scp-cn-2999">SCP-CN-2999</a>&nbsp;&nbsp;&nbsp;&nbsp;Observator Ex Machina<br>
