--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         ;text-decoration:none;
     }  
 </style>
-<body style="background-color: black;">
+<body style="background-color: white;">
 
-<p style="font-size: 50px;text-align: center;color: white;">小时的箱子</p>
+<p style="font-size: 50px;text-align: center;color: black;">小时的箱子</p>
 
 <p style="color: white;font-size: larger;margin-left: 20px;">这里有一些好玩的东西：</p>
 
 <div style="width:1000px;overflow: hidden;margin-left: 1em;">
  
-    <div id="title1" style="height:10px;width:1000px;background-color: black;color: white;" onclick="onTileClick1()">感兴趣的基金会项目（点击以展开）</div>
+    <div id="title1" style="height:10px;width:1000px;background-color: white;color: black;" onclick="onTileClick1()">感兴趣的基金会项目（点击以展开）</div>
    
-    <div id="content1" style="height:0px;background-color: black;color: white;">
+    <div id="content1" style="height:0px;background-color: white;color: black;">
         <p> <br>它们有的在创意上一鸣惊人，有的在情感上收放自如，有的在表现上颇费苦心；但是共同点是它们都有出色的文笔和极高的评分。<br><br>
             <ul>
 				<li><a href="http://scp-wiki-cn.wikidot.com/scp-cn-3000">SCP-CN-3000</a>&nbsp;&nbsp;&nbsp;&nbsp;众节点永垂不朽</li>
@@ -52,18 +52,20 @@
   </div>
   <div style="width:1000px;overflow: hidden;margin-left: 1em;">
  
-    <div id="title2" style="height:10px;width:1000px;background-color: black;color: white;" onclick="onTileClick2()">感兴趣的填词</div>
+    <div id="title2" style="height:10px;width:1000px;background-color: white;color: black;" onclick="onTileClick2()">感兴趣的填词</div>
    
-    <div id="content2" style="height:0px;background-color: black;color: white;">
+    <div id="content2" style="height:0px;background-color: white;color: black;">
         <p> <br>测试用，记得删掉<br><br>
         </p>
     </div>
     
   </div>
-   
+
+  <p><a href="http:TinyTicky.github.io/Ishmaorange">ishmaorange</a></p>
+  
   <script type="text/javascript">
       var content1 = document.getElementById("content1");
-      function onTileClick1() {content1.style.height = content1.offsetHeight===1000?0+'px':1000+'px';}
+      function onTileClick1() {content1.style.height = content1.offsetHeight===250?0+'px':250+'px';}
   </script> 
   <script type="text/javascript">
     var content2 = document.getElementById("content2");
