--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <p style="font-size: 50px;text-align: center;color: black;">小时的箱子</p>
 
-<p style="color: white;font-size: larger;margin-left: 20px;">这里有一些好玩的东西：</p>
+<p style="color: black;font-size: larger;margin-left: 20px;">这里有一些好玩的东西：</p>
 
 <div style="width:1000px;overflow: hidden;margin-left: 1em;">
  
