--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
   </div>
 
-  <p><a href="http:TinyTicky.github.io/Ishmaorange/index.html">ishmaorange</a></p>
+  <p><a href="http:TinyTicky.github.io/Ishmaorange/index.html">超级可爱以实玛橘点击即看</a></p>
   
   <script type="text/javascript">
       var content1 = document.getElementById("content1");
