--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  
     <div id="title2" style="height:10px;width:1000px;background-color: white;color: black;" onclick="onTileClick2()">感兴趣的填词</div>
    
-    <div id="content2" style="height:10px;width:1000px;background-color: white;color: black;">
+    <div id="content2" style="height:0px;background-color: white;color: black;">
         <p> <br>测试用，记得删掉<br><br>
         </p>
     </div>
@@ -69,7 +69,7 @@
   </script> 
   <script type="text/javascript">
     var content2 = document.getElementById("content2");
-    function onTileClick2() {content2.style.height = content2.offsetHeight===250?0+'px':250+'px';}
+    function onTileClick2() {content1.style.height = content1.offsetHeight===250?0+'px':250+'px';}
 </script> 
 
 </body>
